--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,15 @@
 @use 'variaveis';
 @use 'hero';
+@use 'shows';
+@use 'plans';
 
-@font-face{
+@font-face {
     font-family: Avenir;
     src: url(../../assets/fonts/Avenir-Regular.woff2);
     font-weight: 400;
 }
 
-@font-face{
+@font-face {
     font-family: Avenir;
     src: url(../../assets/fonts/Avenir-Bold.woff2);
     font-weight: 700;
@@ -17,11 +19,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Avenir, sans-serif;
 }
 
 body {
     background-color: variaveis.$corDeFundo;
-    font-family: Avenir, sans-serif;
+
 }
 
 @mixin text($fontSize: 16px) {
@@ -63,4 +66,18 @@ body {
 
 .title--small {
     @include title(28px)
+}
+
+.button {
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    color: variaveis.$corTextoSecundaria;
+    background-color: #6421FF;
+    border: none;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
 }
