--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -10,7 +10,11 @@
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
 
-        &--is-active{
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        &--is-active {
             display: grid;
         }
 
@@ -38,6 +42,10 @@
 
             &--is-active {
                 border-color: variaveis.$corTextoSecundaria;
+            }
+
+            @media (max-width: 768px) {
+                font-size: 16px;
             }
         }
     }
